Add 1px padding to rects in KisPerspectiveTransformWorker to account for bilinear filtering

BUG:484677


(cherry picked from commit 5ae24a5650cccd807a5c0deebc76cde2b493531e)